--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "glamor": "^2.18.2",
+    "ramda": "^0.22.1",
     "react-router": "^4.0.0-alpha.5",
     "react-scripts": "^0.7.0",
     "xhr": "^2.2.2"
